@@ -35,7 +35,8 @@ mc.abart <- function(
                      ndpost=1000L, nskip=100L,
                      keepevery=c(1L, 10L, 10L)[ntype],
                      printevery=100L, transposed=FALSE,
-                     mc.cores = 2L, nice = 19L, seed = 99L
+                     mc.cores = getOption('mc.cores', 2L),
+                     nice = 19L, seed = 99L
                      )
 {
     if(type!='abart') stop('type must be "abart"')
