@@ -36,7 +36,8 @@ mc.mbart2 <- function(
                      keepevery=c(1L, 10L, 10L)[ntype],
                      printevery=100L, transposed=FALSE,
                      ##hostname=FALSE,
-                     mc.cores = 2L, nice = 19L, seed = 99L
+                     mc.cores = getOption('mc.cores', 2L),
+                     nice = 19L, seed = 99L
                      )
 {
     if(.Platform$OS.type!='unix')
