@@ -36,7 +36,8 @@ ml.gbart <- function(
                      keepevery=c(1L, 10L, 10L)[ntype],
                      printevery=100L, transposed=FALSE,
                      probs=c(0.025, 0.975),
-                     mc.cores = 2L, nice = 19L, seed = 99L,
+                     mc.cores = getOption('mc.cores', 2L),
+                     nice = 19L, seed = 99L,
                      shards = 1L, weight=rep(NA, shards),
                      meta=FALSE
                      )
