@@ -16,10 +16,12 @@
 ## along with this program; if not, a copy is available at
 ## https://www.R-project.org/Licenses/GPL-2
 
-predict.criskbart <- function(object, newdata, newdata2,
+predict.criskbart <- function(object, newdata, newdata2=newdata,
                               mc.cores=getOption('mc.cores', 1L),
                               openmp=(mc.cores.openmp()>0), ...) {
 
+    ##if(class(newdata) == "data.frame") newdata=bartModelMatrix(newdata)
+    ##if(class(newdata2) == "data.frame") newdata2=bartModelMatrix(newdata2)
     ## if(class(newdata) != "matrix") stop("newdata must be a matrix")
     ## if(class(newdata2) != "matrix") stop("newdata2 must be a matrix")
 
