@@ -1,5 +1,6 @@
 
-library(BART)
+options(mc.cores=8)
+library(BART3)
 
 B <- getOption('mc.cores', 1)
 figures = getOption('figures', default='NONE')
